# PaperPlay

./: .gitignore  README.md  pyproject.toml
docs/: CROSSWORD_FORMAT.md  GAMES.md
paperplay/: __main__.py  app.py
paperplay/core/: errors.py
paperplay/games/: __init__.py
paperplay/games/connect4/: model.py  widget.py
paperplay/games/crossword/: model.py  widget.py
paperplay/games/dotsboxes/: model.py  widget.py
paperplay/games/hangman/: model.py  widget.py  words.py
paperplay/games/nim/: model.py  widget.py
paperplay/games/nonogram/: model.py  puzzles.py  widget.py
paperplay/games/sudoku/: model.py  puzzles.py  widget.py
paperplay/games/tictactoe/: model.py  widget.py
paperplay/persistence/: crossword_io.py  crossword_schema.py
paperplay/ui/: main_window.py  theme.py
tests/: test_connect4.py  test_crossword.py  test_dotsboxes.py  test_hangman.py  test_nim.py  test_nonogram.py  test_sanity.py  test_sudoku.py  test_tictactoe.py  test_ui_smoke.py
