[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperplay"
version = "0.1.0"
description = "PaperPlay: Pen-and-paper game suite (PySide6)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["paperplay*"]
